new update chnagemaker website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 <body>
 
-
 	<div class="change-maker-container">
 
 		<nav class="navigation-bar">
@@ -73,11 +72,16 @@
 						</span>
 					</div>
 
+
 				</div>
 
-				<a href="#" class="nav-link navigation-text-style" data-target="about">About RCMI</a>
+				<a href="orchid-school.html" class="navigation-text-style">Certified Institutes</a>
 				<a href="#" class="navigation-text-style nav-link" data-target="impact">Our Impact</a>
-				<a href="#" class="navigation-text-style nav-link" data-target="contact">Contact Us</a>
+				<a href="#" class="nav-link navigation-text-style" data-target="about">How RCMI Works?</a>
+
+
+
+				<!-- <a href="#" class="navigation-text-style nav-link" data-target="contact">Contact Us</a> -->
 
 			</div>
 
@@ -104,7 +108,11 @@
 							</div>
 
 							<div class="description-smoll-words-title">
-								<p>Life simulation–based assessment that tracks 18 critical <br> competencies through
+
+								<img class="image-fit-cover" src="update-image/Water-flow-image.svg" alt="">
+
+								<p class="description-water-background">Life simulation–based assessment that tracks 18
+									critical <br> competencies through
 									authentic
 									decision-making, not surveys.</p>
 							</div>
@@ -115,7 +123,7 @@
 								<a href="https://reallivesworld.com/reallives-website-main/license.html"
 									target="_blank">
 
-									<button class="become-change-btn" t>Become a ChangeMaker</button>
+									<button class="become-change-btn" t>Begin Your Journey of Change</button>
 								</a>
 
 
@@ -135,107 +143,112 @@
 
 					</div>
 
+					<!-- second html structure index Features  -->
+
+
 					<div class="section-second-container">
 
-						<p class="reallives-change-text">RealLives ChangeMaker Index Features</p>
+						<div class="second-description-label">
+							<p class="reallives-change-text">RealLives ChangeMaker Index Features</p>
+							<p class="description-features-bottom">Discover how the ChangeMaker Index turns your
+								life
+								choices
+								into insights, tracking growth, <br>
+								guiding decisions, and unlocking your potential as a global ChangeMaker.</p>
 
-						<div class="index-features-container">
-
-							<div class="icon-features-section-container">
-
-								<div class="four-grid-container">
-
-									<div class="box-card-data">
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/airplane-duotone.svg" alt="">
-										</div>
-
-										<p class="title-of-card">Students Simulate</p>
-									</div>
-
-									<div class="box-card-data">
-
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/chart-line-up-duotone.svg" alt="">
-										</div>
-
-										<p class="title-of-card">Decisions Tracked</p>
-									</div>
-
-									<div class="box-card-data">
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/Clipboard.svg" alt="">
-										</div>
-
-										<p class="title-of-card">Insights Delivered</p>
-									</div>
+						</div>
 
 
-									<div class="box-card-data">
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/lightning-duotone.svg" alt="">
-										</div>
+						<div class="card-index-features-container">
 
-										<p class="title-of-card">AI Guidance</p>
-
-									</div>
-
+							<div class="cards-detail-box">
+								<div class="content-data-text-box">
+									<p class="features-text-card">Students Simulate</p>
+									<p class="features-description-text">Students step into diverse real-world lives,
+										experiencing challenges,
+										opportunities, and cultural contexts firsthand. They don’t just learn about the
+										world—they live it through immersive simulation.</p>
 								</div>
 
+								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
 
-								<div class="four-grid-container">
+							</div>
 
-									<div class="box-card-data">
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/book-duotone.svg" alt="">
-										</div>
-
-										<p class="title-of-card">Actionable Reports</p>
-									</div>
-
-
-									<div class="box-card-data">
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/user-duotone.svg" alt="">
-										</div>
-
-										<p class="title-of-card">Personal Growth</p>
-									</div>
-
-
-									<div class="box-card-data">
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/globe-duotone.svg" alt="">
-										</div>
-
-										<p class="title-of-card">Globally Contextualized</p>
-									</div>
-
-
-									<div class="box-card-data">
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/target-duotone.svg" alt="">
-										</div>
-
-										<p class="title-of-card">18 ChangeMaker Competencies</p>
-									</div>
-
-
+							<div class="cards-detail-box">
+								<div class="content-data-text-box">
+									<p class="features-text-card">Decisions Tracked</p>
+									<p class="features-description-text">Every choice—small or big—is recorded and
+										analyzed.This gives students a clear view of how decisions shape outcomes,
+										helping them understand responsibility, ethics, and long-term impact.</p>
 								</div>
 
+								<img class="image-fit-cover " src="update-image/Decisions Tracked.png" alt="">
 
-								<p class="description-features-bottom">Discover how the ChangeMaker Index turns your
-									life
-									choices
-									into insights, tracking growth, <br>
-									guiding decisions, and unlocking your potential as a global ChangeMaker.</p>
+							</div>
+
+							<div class="cards-detail-box">
+								<div class="content-data-text-box">
+									<p class="features-text-card">Students Simulate</p>
+									<p class="features-description-text">Students step into diverse real-world lives,
+										experiencing challenges,
+										opportunities, and cultural contexts firsthand. They don’t just learn about the
+										world—they live it through immersive simulation.</p>
+								</div>
+
+								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
+
+							</div>
+
+							<div class="cards-detail-box">
+								<div class="content-data-text-box">
+									<p class="features-text-card">Students Simulate</p>
+									<p class="features-description-text">Students step into diverse real-world lives,
+										experiencing challenges,
+										opportunities, and cultural contexts firsthand. They don’t just learn about the
+										world—they live it through immersive simulation.</p>
+								</div>
+
+								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
 
 							</div>
 
 
+							<div class="cards-detail-box">
+								<div class="content-data-text-box">
+									<p class="features-text-card">Students Simulate</p>
+									<p class="features-description-text">Students step into diverse real-world lives,
+										experiencing challenges,
+										opportunities, and cultural contexts firsthand. They don’t just learn about the
+										world—they live it through immersive simulation.</p>
+								</div>
+
+								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
+
+							</div>
+
+
+							<div class="cards-detail-box">
+								<div class="content-data-text-box">
+									<p class="features-text-card">Students Simulate</p>
+									<p class="features-description-text">Students step into diverse real-world lives,
+										experiencing challenges,
+										opportunities, and cultural contexts firsthand. They don’t just learn about the
+										world—they live it through immersive simulation.</p>
+								</div>
+
+								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
+
+							</div>
+
+
+
 						</div>
 
+
 					</div>
+
+					<!-- second html structure index Features  -->
+
 
 					<div class="changes-maker-section-index">
 
@@ -247,6 +260,7 @@
 								frameborder="0"></iframe>
 						</div>
 					</div>
+
 
 					<div class="impact-section-container">
 
@@ -335,6 +349,7 @@
 						</div>
 
 					</div>
+
 
 					<div class="container-benifit-school">
 
@@ -2460,8 +2475,11 @@
 
 
 	<!-- JS: Enable/Disable Send Button -->
+
 	<script>
+
 		document.addEventListener("DOMContentLoaded", function () {
+
 			const firstName = document.getElementById("firstName");
 			const lastName = document.getElementById("lastName");
 			const email = document.getElementById("email");
@@ -2469,6 +2487,7 @@
 			const sendBtn = document.querySelector("button[type='submit']");
 
 			// Default state
+
 			sendBtn.disabled = true;
 			sendBtn.style.backgroundColor = "#ffc06785";
 
@@ -2492,6 +2511,7 @@
 			email.addEventListener("input", checkFormFields);
 			message.addEventListener("input", checkFormFields);
 		});
+
 	</script>
 
 
