--- a/index.html
+++ b/index.html
@@ -188,58 +188,55 @@
 
 							<div class="cards-detail-box">
 								<div class="content-data-text-box">
-									<p class="features-text-card">Students Simulate</p>
-									<p class="features-description-text">Students step into diverse real-world lives,
-										experiencing challenges,
-										opportunities, and cultural contexts firsthand. They don’t just learn about the
-										world—they live it through immersive simulation.</p>
+									<p class="features-text-card">Insights Delivered</p>
+									<p class="features-description-text">The system automatically transforms student
+										choices into rich insights, highlighting thinking patterns, strengths, and areas
+										for growth. Educators get an instant window into each learner’s mindset.</p>
 								</div>
 
-								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
+								<img class="image-fit-cover " src="update-image/Insights Delivered.png" alt="">
 
 							</div>
 
 							<div class="cards-detail-box">
 								<div class="content-data-text-box">
-									<p class="features-text-card">Students Simulate</p>
-									<p class="features-description-text">Students step into diverse real-world lives,
-										experiencing challenges,
-										opportunities, and cultural contexts firsthand. They don’t just learn about the
-										world—they live it through immersive simulation.</p>
+									<p class="features-text-card">AI Guidance</p>
+									<p class="features-description-text">Built-in AI coaches students as they play,
+										providing nudges, reflections, and tailored suggestions. It supports deeper
+										self-awareness, critical thinking, and intentional decision-making.
+									</p>
 								</div>
 
-								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
-
-							</div>
-
-
-							<div class="cards-detail-box">
-								<div class="content-data-text-box">
-									<p class="features-text-card">Students Simulate</p>
-									<p class="features-description-text">Students step into diverse real-world lives,
-										experiencing challenges,
-										opportunities, and cultural contexts firsthand. They don’t just learn about the
-										world—they live it through immersive simulation.</p>
-								</div>
-
-								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
+								<img class="image-fit-cover " src="update-image/AI Guidance.png" alt="">
 
 							</div>
 
 
 							<div class="cards-detail-box">
 								<div class="content-data-text-box">
-									<p class="features-text-card">Students Simulate</p>
-									<p class="features-description-text">Students step into diverse real-world lives,
-										experiencing challenges,
-										opportunities, and cultural contexts firsthand. They don’t just learn about the
-										world—they live it through immersive simulation.</p>
+									<p class="features-text-card">Actionable Reports</p>
+									<p class="features-description-text">Easy-to-understand dashboards summarise all
+										learning outcomes and competencies. Educators receive detailed, ready-to-use
+										reports they can use for feedback, assessment, and personalised mentoring.</p>
 								</div>
 
-								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
+								<img class="image-fit-cover border-radius-4 " src="update-image/Actionable Reports.png"
+									alt="">
 
 							</div>
 
+
+							<div class="cards-detail-box">
+								<div class="content-data-text-box">
+									<p class="features-text-card">Personal Growth</p>
+									<p class="features-description-text">Students discover who they are as
+										decision-makers.They build resilience, empathy, global awareness, and confidence
+										through repeated reflection and experience-based learning.</p>
+								</div>
+
+								<img class="image-fit-cover " src="update-image/Personal Growth.png" alt="">
+
+							</div>
 
 
 						</div>
@@ -252,13 +249,32 @@
 
 					<div class="changes-maker-section-index">
 
-						<P class="experience-text-reallives">Experience RealLives ChangeMaker Index</P>
+						<div class="features-index-absolute">
+							<!-- <P class="experience-text-reallives">See the ChangeMaker Index in Action</P> -->
+							<div class="second-description-label">
+								<p class="reallives-change-text">See the ChangeMaker Index in Action</p>
+								<p class="description-features-bottom">Explore an interactive demo of the RCMI to
+									understand how it works, what it measures, <br> and how it supports student growth.
+								</p>
 
-						<div class="rcmi-embed-cdn">
-							<iframe class="iframe-width width-100"
-								src="https://demo.arcade.software/i527E8HZo4YlXdSC8arb?embed&amp;embed_mobile=tab&amp;embed_desktop=inline&amp;show_copy_link=true"
-								frameborder="0"></iframe>
+							</div>
 						</div>
+
+						<img class="image-fit-cover" src="update-image/Chnagemaker-index-background.png" alt="">
+
+
+						<div class="outer-rcmi-wrapper">
+
+							<div class="rcmi-embed-cdn">
+								<iframe class="iframe-width width-100"
+									src="https://demo.arcade.software/i527E8HZo4YlXdSC8arb?embed&amp;embed_mobile=tab&amp;embed_desktop=inline&amp;show_copy_link=true"
+									frameborder="0"></iframe>
+							</div>
+
+						</div>
+
+
+
 					</div>
 
 
