updating landing page

--- a/index.html
+++ b/index.html
@@ -278,6 +278,132 @@
 					</div>
 
 
+					<div class="container-benifit-school">
+
+						<img class="image-cover-class" src="update-image/background-benifits-image.svg" alt="">
+
+						<div class="benifits-container-inner">
+
+							<p class="benifit-title-text">Benefits for Everyone</p>
+							<p class="description-features-bottom">Explore an interactive demo of the RCMI to
+								understand how it works, what it measures, <br> and how it supports student growth.
+							</p>
+
+							<div class="benifit-box-school-container">
+
+								<div class="benifit-cards-box">
+
+									<div class="top-benfit-header">
+
+										<div class="icon-card">
+											<img class="image-fit-content" src="image/student-duotone 1.svg" alt="">
+										</div>
+
+										<p class="header-title-side-text">Empower Yourself to Grow Beyond Academics</p>
+
+									</div>
+
+									<div class="bottom-data-benifit">
+
+										<p class="bottom-data-benifit-description">RealLives helps you go beyond
+											achievements and test scores by making social, emotional, and ethical growth
+											visible and measurable. Through immersive life simulations, you experience
+											real-world situations that build empathy, resilience, and responsible
+											decision-making, all key to thriving in life and work.</p>
+
+									</div>
+
+								</div>
+
+
+								<div class="benifit-cards-box">
+
+									<div class="top-benfit-header">
+
+										<div class="icon-card">
+											<img class="image-fit-content" src="image/chalkboard-teacher-duotone 1.svg"
+												alt="">
+										</div>
+
+										<p class="header-title-side-text">Gain Deep Insights into Your Growth</p>
+
+									</div>
+
+									<div class="bottom-data-benifit">
+
+										<p class="bottom-data-benifit-description">
+											The ChangeMaker Index transforms every in-game choice into meaningful
+											insights
+											on your mindset and behavior. It helps you understand how you approach
+											challenges, collaborate with others, and lead with purpose, supporting
+											self-awareness and continuous personal development.
+										</p>
+									</div>
+
+								</div>
+
+
+								<div class="benifit-cards-box">
+
+									<div class="top-benfit-header">
+
+										<div class="icon-card">
+											<img class="image-fit-content" src="image/backpack-duotone 1.svg" alt="">
+										</div>
+
+										<p class="header-title-side-text">Seamless Integration with Your Goals</p>
+
+									</div>
+
+									<div class="bottom-data-benifit">
+
+										<p class="bottom-data-benifit-description">
+											RealLives aligns effortlessly with personal growth journeys, professional
+											development paths, and lifelong learning goals. You can track your progress
+											across 18 ChangeMaker competencies, turning qualities like compassion,
+											integrity, and adaptability into measurable growth milestones.
+										</p>
+
+									</div>
+
+								</div>
+
+
+								<div class="benifit-cards-box">
+
+									<div class="top-benfit-header">
+
+										<div class="icon-card">
+											<img class="image-fit-content" src="image/users-three-duotone 1.svg" alt="">
+										</div>
+
+										<p class="header-title-side-text">Build a Life of Reflection and Purpose</p>
+
+									</div>
+
+									<div class="bottom-data-benifit">
+
+										<p class="bottom-data-benifit-description">
+											By revealing the impact of your decisions, RealLives encourages you to think
+											deeply, act responsibly, and grow consciously. It nurtures a global
+											community of
+											ChangeMakers, empathetic, confident individuals ready to lead with purpose
+											and
+											create positive change in the world.
+										</p>
+									</div>
+
+								</div>
+
+
+							</div>
+						</div>
+
+
+
+
+					</div>
+
 					<div class="impact-section-container">
 
 						<p class="experience-text-reallives">Our Impact</p>
@@ -366,118 +492,6 @@
 
 					</div>
 
-
-					<div class="container-benifit-school">
-
-						<p class="benifit-title-text">Benefits for Everyone</p>
-
-						<div class="benifit-box-school-container">
-
-							<div class="benifit-cards-box">
-
-								<div class="top-benfit-header">
-
-									<div class="icon-card">
-										<img class="image-fit-content" src="image/student-duotone 1.svg" alt="">
-									</div>
-
-									<p class="header-title-side-text">Empower Yourself to Grow Beyond Academics</p>
-
-								</div>
-
-								<div class="bottom-data-benifit">
-
-									<p class="bottom-data-benifit-description">RealLives helps you go beyond
-										achievements and test scores by making social, emotional, and ethical growth
-										visible and measurable. Through immersive life simulations, you experience
-										real-world situations that build empathy, resilience, and responsible
-										decision-making, all key to thriving in life and work.</p>
-
-								</div>
-
-							</div>
-
-
-							<div class="benifit-cards-box">
-
-								<div class="top-benfit-header">
-
-									<div class="icon-card">
-										<img class="image-fit-content" src="image/chalkboard-teacher-duotone 1.svg"
-											alt="">
-									</div>
-
-									<p class="header-title-side-text">Gain Deep Insights into Your Growth</p>
-
-								</div>
-
-								<div class="bottom-data-benifit">
-
-									<p class="bottom-data-benifit-description">
-										The ChangeMaker Index transforms every in-game choice into meaningful insights
-										on your mindset and behavior. It helps you understand how you approach
-										challenges, collaborate with others, and lead with purpose, supporting
-										self-awareness and continuous personal development.
-									</p>
-								</div>
-
-							</div>
-
-
-							<div class="benifit-cards-box">
-
-								<div class="top-benfit-header">
-
-									<div class="icon-card">
-										<img class="image-fit-content" src="image/backpack-duotone 1.svg" alt="">
-									</div>
-
-									<p class="header-title-side-text">Seamless Integration with Your Goals</p>
-
-								</div>
-
-								<div class="bottom-data-benifit">
-
-									<p class="bottom-data-benifit-description">
-										RealLives aligns effortlessly with personal growth journeys, professional
-										development paths, and lifelong learning goals. You can track your progress
-										across 18 ChangeMaker competencies, turning qualities like compassion,
-										integrity, and adaptability into measurable growth milestones.
-									</p>
-
-								</div>
-
-							</div>
-
-
-							<div class="benifit-cards-box">
-
-								<div class="top-benfit-header">
-
-									<div class="icon-card">
-										<img class="image-fit-content" src="image/users-three-duotone 1.svg" alt="">
-									</div>
-
-									<p class="header-title-side-text">Build a Life of Reflection and Purpose</p>
-
-								</div>
-
-								<div class="bottom-data-benifit">
-
-									<p class="bottom-data-benifit-description">
-										By revealing the impact of your decisions, RealLives encourages you to think
-										deeply, act responsibly, and grow consciously. It nurtures a global community of
-										ChangeMakers, empathetic, confident individuals ready to lead with purpose and
-										create positive change in the world.
-									</p>
-								</div>
-
-							</div>
-
-
-						</div>
-
-					</div>
 
 				</div>
 
@@ -1015,6 +1029,7 @@
 
 			<div class="tab-pane hero-page background-color-transparent  padding-global" id="impact"
 				style="display: none;">
+
 				<div class="impact-section-container tab-impact active-impact" id="tab1impact">
 
 
