--- a/index.html
+++ b/index.html
@@ -284,9 +284,16 @@
 
 						<div class="benifits-container-inner">
 
-							<p class="benifit-title-text">Benefits for Everyone</p>
-							<p class="description-features-bottom">Explore an interactive demo of the RCMI to
-								understand how it works, what it measures, <br> and how it supports student growth.
+
+							<div class="layer-parent">
+								<p class="benifit-title-text">Benefits for Everyone</p>
+							</div>
+
+
+							<p class="description-features-bottom">RealLives helps you build the social, emotional, and
+								ethical skills that matter most in life. <br> Grow with confidence as you learn to
+								navigate
+								real-world challenges with purpose.
 							</p>
 
 							<div class="benifit-box-school-container">
@@ -342,33 +349,6 @@
 
 								</div>
 
-
-								<div class="benifit-cards-box">
-
-									<div class="top-benfit-header">
-
-										<div class="icon-card">
-											<img class="image-fit-content" src="image/backpack-duotone 1.svg" alt="">
-										</div>
-
-										<p class="header-title-side-text">Seamless Integration with Your Goals</p>
-
-									</div>
-
-									<div class="bottom-data-benifit">
-
-										<p class="bottom-data-benifit-description">
-											RealLives aligns effortlessly with personal growth journeys, professional
-											development paths, and lifelong learning goals. You can track your progress
-											across 18 ChangeMaker competencies, turning qualities like compassion,
-											integrity, and adaptability into measurable growth milestones.
-										</p>
-
-									</div>
-
-								</div>
-
-
 								<div class="benifit-cards-box">
 
 									<div class="top-benfit-header">
@@ -396,17 +376,44 @@
 								</div>
 
 
+
+								<div class="benifit-cards-box">
+
+									<div class="top-benfit-header">
+
+										<div class="icon-card">
+											<img class="image-fit-content" src="update-image/arrow-up.svg" alt="">
+										</div>
+
+										<p class="header-title-side-text">Seamless Integration with Your Goals</p>
+
+									</div>
+
+									<div class="bottom-data-benifit">
+
+										<p class="bottom-data-benifit-description">
+											RealLives aligns effortlessly with personal growth journeys, professional
+											development paths, and lifelong learning goals. You can track your progress
+											across 18 ChangeMaker competencies, turning qualities like compassion,
+											integrity, and adaptability into measurable growth milestones.
+										</p>
+
+									</div>
+
+								</div>
+
+
 							</div>
 						</div>
-
-
-
 
 					</div>
 
 					<div class="impact-section-container">
 
 						<p class="experience-text-reallives">Our Impact</p>
+						<p class="description-features-bottom">Discover the global footprint of the RealLives Foundation
+							through the workshops and <br> events we’ve hosted to inspire change.
+						</p>
 
 						<div class="inforamtion-card-container">
 
