--- a/index.html
+++ b/index.html
@@ -284,11 +284,9 @@
 
 						<div class="benifits-container-inner">
 
-
 							<div class="layer-parent">
 								<p class="benifit-title-text">Benefits for Everyone</p>
 							</div>
-
 
 							<p class="description-features-bottom">RealLives helps you build the social, emotional, and
 								ethical skills that matter most in life. <br> Grow with confidence as you learn to
@@ -482,10 +480,17 @@
 
 							<div class="btn-larne-more">
 
+								<a href="https://reallivesworld.com/reallives-website-main/license.html"
+									target="_blank">
+									<button class="become-change-btn">
+										Explore Workshop Integration
+									</button>
+								</a>
+
 								<a href="">
 
 									<button class="inner-btn">
-										Learn More
+										Explore More Impact Stories
 										<i class="ri-arrow-right-line"></i>
 									</button>
 
