changes to used tool section in cards under the impact page

--- a/index.html
+++ b/index.html
@@ -1151,12 +1151,12 @@
 									</span>
 
 
-									<span class="flex-align-start">
+									<!-- <span class="flex-align-start">
 
 										<p class="participants-title-text">Used tool :</p>
 										<p class="participants-title-text color-black ">Empathy</p>
 
-									</span>
+									</span> -->
 
 									<span class="span-imapct-colume">
 
@@ -1223,7 +1223,7 @@
 									<span class="flex-align-start">
 
 										<p class="participants-title-text">Used tool :</p>
-										<p class="participants-title-text color-black ">Empathy</p>
+										<p class="participants-title-text color-black ">Empathy Canvas, RCMI</p>
 
 									</span>
 
@@ -1315,7 +1315,7 @@
 									<span class="flex-align-start">
 
 										<p class="participants-title-text">Used tool :</p>
-										<p class="participants-title-text color-black ">Empathy</p>
+										<p class="participants-title-text color-black ">Empathy Canvas, RCMI</p>
 
 									</span>
 
