additions of new images to home page

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 										world—they live it through immersive simulation.</p>
 								</div>
 
-								<img class="image-fit-cover " src="update-image/Student-Semulate.png" alt="">
+								<img class="image-fit-cover " src="update-image/students-simulate.jpg" alt="">
 
 							</div>
 
@@ -194,7 +194,7 @@
 										for growth. Educators get an instant window into each learner’s mindset.</p>
 								</div>
 
-								<img class="image-fit-cover " src="update-image/Insights Delivered.png" alt="">
+								<img class="image-fit-cover " src="update-image/insights-delivered.jpg" alt="">
 
 							</div>
 
@@ -207,7 +207,7 @@
 									</p>
 								</div>
 
-								<img class="image-fit-cover " src="update-image/AI Guidance.png" alt="">
+								<img class="image-fit-cover " src="update-image/ai-guidance.jpg" alt="">
 
 							</div>
 
@@ -220,7 +220,7 @@
 										reports they can use for feedback, assessment, and personalised mentoring.</p>
 								</div>
 
-								<img class="image-fit-cover border-radius-4 " src="update-image/Actionable Reports.png"
+								<img class="image-fit-cover border-radius-4 " src="update-image/actionable-reports.jpg"
 									alt="">
 
 							</div>
@@ -234,7 +234,7 @@
 										through repeated reflection and experience-based learning.</p>
 								</div>
 
-								<img class="image-fit-cover " src="update-image/Personal Growth.png" alt="">
+								<img class="image-fit-cover " src="update-image/personal-growth.jpg" alt="">
 
 							</div>
 
