--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 										helping them understand responsibility, ethics, and long-term impact.</p>
 								</div>
 
-								<img class="image-fit-cover " src="update-image/Decisions Tracked.png" alt="">
+								<img class="image-fit-cover " src="update-image/decisions-trackedd.png" alt="">
+								
 
 							</div>
 
