--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
                   </p>
                 </div>
 
-                <div class="individual-slide-inner">
+                <div class="individual-slide-inner hight-mobile-slider">
                   <div class="multi-slides-sync">
                     <img
                       class="image-fit-cover"
@@ -1066,7 +1066,7 @@
                   <!-- <img class="image-fit-cover" src="images/second-workshop-2.png" alt=""> -->
                 </div>
 
-                <div class="individual-slide-inner">
+                <div class="individual-slide-inner hight-mobile-slider">
                   <div class="multi-slides-sync">
                     <img
                       class="image-fit-cover"
@@ -1094,7 +1094,7 @@
                   <!-- <img class="image-fit-cover" src="images/second-workshop-2.png" alt=""> -->
                 </div>
 
-                <div class="individual-slide-inner">
+                <div class="individual-slide-inner hight-mobile-slider">
                   <div class="multi-slides-sync">
                     <img
                       class="image-fit-cover"
@@ -1122,7 +1122,7 @@
               </div>
 
               <div class="bottom-impact-container">
-                <div class="individual-slide-inner">
+                <div class="individual-slide-inner hight-mobile-slider">
                   <div class="multi-slides-sync">
                     <img
                       class="image-fit-cover"
@@ -1141,7 +1141,7 @@
                   </div>
                 </div>
 
-                <div class="individual-slide-inner">
+                <div class="individual-slide-inner hight-mobile-slider">
                   <div class="multi-slides-sync">
                     <img
                       class="image-fit-cover"
