--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
           </div> -->
 
-          <a class="nav-link active" href="#best-suited"> Best Suited For </a>
+          <a class="nav-link active" href="#best-suited"> Home </a>
 
           <a class="nav-link" href="#Certified-Institutes">
             Certified Institutes
