--- a/index.html
+++ b/index.html
@@ -2560,7 +2560,7 @@
 
             <div class="workshop-still-container">
               <div class="button-container-workshop-still">
-                <button class="workshop-still-btn">Workshop Stills</button>
+                <button class="workshop-still-btn">Workshop Pictures</button>
               </div>
             
               <div class="container-card-colume">
