--- a/index.html
+++ b/index.html
@@ -2557,7 +2557,7 @@
                   school as an official Changemaker School. This year, the
                   program engaged 75 students, resulting in 10 unique social
                   business pitches and movements, along with 75 individual
-                  Changemaker Reports showcasing thoughtful, impact-driven
+                  Changemaker Reports showca`sing thoughtful, impact-driven
                   ideas.
                 </p>
                 <p class="foundation-description-text">
@@ -2631,16 +2631,28 @@
 
                     <div class="inner-data-description">
                       <p>
-                        I never thought about poverty beyond statistics. Playing
-                        a life struggling with SDG 1 made me realize the daily
-                        decisions people face. Our team's solution for
-                        accessible microfinance actually makes sense now because
-                        we understood the problem deeply.
+                        I used to think global problems were too big for students like us. Experiencing life through the SDGs helped me understand people’s struggles and showed me that even small business ideas can create real change
                       </p>
                     </div>
 
                     <div class="grade-student-detail">
-                      <p>- Aanya Jain (Grade 11)</p>
+                      <p>— Grade 11 Student</p>
+                    </div>
+                  </div>
+
+                  <div class="inner-data-impact">
+                    <div class="quotes-container">
+                      <img src="update-image/quote-svg.svg" alt="" />
+                    </div>
+
+                    <div class="inner-data-description">
+                      <p>
+                        Living a life connected to the SDGs helped me feel empathy, not just learn facts. It made our social business idea more meaningful because we designed it for real people, not imaginary problems.
+                      </p>
+                    </div>
+
+                    <div class="grade-student-detail">
+                      <p>— Grade 11 Student</p>
                     </div>
                   </div>
 
@@ -2660,27 +2672,7 @@
                     </div>
 
                     <div class="grade-student-detail">
-                      <p>- Aanya Jain (Grade 11)</p>
-                    </div>
-                  </div>
-
-                  <div class="inner-data-impact">
-                    <div class="quotes-container">
-                      <img src="update-image/quote-svg.svg" alt="" />
-                    </div>
-
-                    <div class="inner-data-description">
-                      <p>
-                        I never thought about poverty beyond statistics. Playing
-                        a life struggling with SDG 1 made me realize the daily
-                        decisions people face. Our team's solution for
-                        accessible microfinance actually makes sense now because
-                        we understood the problem deeply.
-                      </p>
-                    </div>
-
-                    <div class="grade-student-detail">
-                      <p>- Aanya Jain (Grade 11)</p>
+                      <p>— Grade 11 Student</p>
                     </div>
                   </div>
                 </div>
