--- a/index.html
+++ b/index.html
@@ -2663,11 +2663,7 @@
 
                     <div class="inner-data-description">
                       <p>
-                        I never thought about poverty beyond statistics. Playing
-                        a life struggling with SDG 1 made me realize the daily
-                        decisions people face. Our team's solution for
-                        accessible microfinance actually makes sense now because
-                        we understood the problem deeply.
+                        This experience made me realize that empathy is the first step to changemaking. Understanding global challenges helped our team build a business idea that focuses on impact, not just profit.
                       </p>
                     </div>
 
