--- a/index.html
+++ b/index.html
@@ -2681,7 +2681,7 @@
               </p>
 
               <div class="changemaker-certificate">
-                <img src="update-image/certificate.svg" alt="" />
+                <img src="https://reallivesfrontend.s3.us-east-1.amazonaws.com/certificate.svg" alt="" />
               </div>
             </div>
           </div>
